# opencv-eye-tracker

./: BUILD  CMakeLists.txt
Eye-tracker/: CMakeLists.txt  Eye-tracker.cpp  Eye-tracker.h
assets/: face_mesh_desktop.pbtxt
